--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -111,16 +111,106 @@
                     </div>
                 </th>
                 <tr>
-                  <th class="td_left" *ngFor="let column of tableColumns">
-                    {{ column }}
+                  <th class="td_right">Sr. No.
                     <div class="filter-container">
-                      <div class="filter-toggle" (click)="toggleFilter(column)">
+                      <div class="filter-toggle" (click)="toggleFilter('Sr.No.')">
                         <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
                       </div>
-                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
-                        <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
-                        <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
-                          <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['Sr.No.']}">
+                        <div class="filter-option" (click)="applyFilter('Sr.No.', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['Sr.No.']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('Sr.No.')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_left" style="width: 30%;">Supplier Name
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('SupplierName')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SupplierName']}">
+                        <div class="filter-option" (click)="applyFilter('SupplierName', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['SupplerName']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('SupplerName')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right">Receipt Qty
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('ReceiptQty')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ReceiptQty']}">
+                        <div class="filter-option" (click)="applyFilter('ReceiptQty', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['ReceiptQty']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('ReceiptQty')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right">CR Qty
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('CRQty')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CRQty']}">
+                        <div class="filter-option" (click)="applyFilter('CRQty', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['CRQty']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CRQty')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right">Receipt Tonnage
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('ReceiptTonnage')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['ReceiptTonnage']}">
+                        <div class="filter-option" (click)="applyFilter('ReceiptTonnage', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['ReceiptTonnage']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('ReceiptTonnage')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right">CR Tonnage
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('CRTonnage')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CRTonnage']}">
+                        <div class="filter-option" (click)="applyFilter('CRTonnage', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['CRTonnage']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CRTonnage')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_right">CR % On Tonnage
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('CR%OnTonnage')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CR%OnTonnage']}">
+                        <div class="filter-option" (click)="applyFilter('CR%OnTonnage', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['CR%OnTonnage']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('CR%OnTonnage')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
+                  <th class="td_left">Rejection Details
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('RejectionDetails')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RejectionDetails']}">
+                        <div class="filter-option" (click)="applyFilter('CR%OnTonnage', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['RejectionDetails']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('RejectionDetails')">
                         </div>
                       </div>
                     </div>
