--- a/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
+++ b/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
@@ -72,9 +72,7 @@
                 </div>
 
             </div>
-
-
-        </div>
+          </div>
 
     </form>
     <div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
@@ -135,17 +133,126 @@
                                         </div>
                                     </th> -->
                                     <tr>
-                                        <th class="td_left">Customer Name</th>
-                                        <th class="td_right"> Target Sales Amount</th>
-                                        <th class="td_right"> Target Sales Avg/Day</th>
-                                        <th class="td_right"> Sale Up to {{todate | date :'dd/MM/YYYY'}}</th>
-                                        <th class="td_right"> Todays Sales {{fromdate | date :'dd/MM/YYYY'}}</th>
-                                        <th class="td_right"> Total Sales</th>
-                                        <th class="td_right"> Remaining Sales</th>
-                                        <th class="td_right"> Current Avg/Day(1)</th>
-                                        <th class="td_right"> Required Avg/Day(26)</th>
-                                    </tr>
-                                </thead>
+                                        <th class="td_left">Customer Name
+                                                   <div class="filter-container">
+                                                    <div class="filter-toggle" (click)="toggleFilter('CustomerName')">
+                                                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                    </div>
+                                                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CustomerName']}">
+                                                      <div class="filter-option" (click)="applyFilter('CustomerName', 'Option 1')">Filter</div>
+                                                      <div class="input-box" [class.show-input]="isFilterInputOpen['CustomerName']">
+                                                        <input type="text" placeholder=" " (blur)="toggleFilterInput('CustomerName')">
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                 </th>
+                                                 <th class="td_right"> Target Sales Amount
+                                                <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('TargetSalesAmount')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['TargetSalesAmount']}">
+                                                  <div class="filter-option" (click)="applyFilter('TargetSalesAmount', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['TargetSalesAmount']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('TargetSalesAmount')">
+                                                  </div>
+                                                </div>
+                                              </div>
+                                            </th>
+                                          
+                                    
+                                        <th class="td_right"> Target Sales Avg/Day
+                                            <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('TargetSalesAvg/Day')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['TargetSalesAvg/Day']}">
+                                                  <div class="filter-option" (click)="applyFilter('TargetSalesAvg/Day', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['TargetSalesAvg/Day']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('TargetSalesAvg/Day')">
+                                                  </div>
+                                                </div>
+                                              </div>
+                                        </th>
+                                        <th class="td_right"> Sale Up to {{todate | date :'dd/MM/YYYY'}}
+                                                   <div class="filter-container">
+                                                    <div class="filter-toggle" (click)="toggleFilter('SaleUpto')">
+                                                      <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                    </div>
+                                                    <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['SaleUpto']}">
+                                                      <div class="filter-option" (click)="applyFilter('SaleUpto', 'Option 1')">Filter</div>
+                                                      <div class="input-box" [class.show-input]="isFilterInputOpen['SaleUpto']">
+                                                        <input type="text" placeholder=" " (blur)="toggleFilterInput('SaleUpto')">
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </th>
+                                        <th class="td_right"> Todays Sales {{fromdate | date :'dd/MM/YYYY'}}
+                                            <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('TodaysSales')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['TodaysSales']}">
+                                                  <div class="filter-option" (click)="applyFilter('TodaysSales', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['TodaysSales']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('TodaysSales')">
+                                                  </div>
+                                                </div>
+                                              </div>  
+                                             </th>
+                                        <th class="td_right"> Total Sales
+                                            <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('TotalSales')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['TotalSales']}">
+                                                  <div class="filter-option" (click)="applyFilter('TotalSales', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['TotalSales']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('TotalSales')">
+                                                  </div>
+                                              </div>
+                                           </div>
+                                        </th>
+                                        <th class="td_right"> Remaining Sales
+                                            <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('RemainingSales')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RemainingSales']}">
+                                                  <div class="filter-option" (click)="applyFilter('RemainingSales', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['RemainingSales']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('RemainingSales')">
+                                                  </div>
+                                              </div>
+                                           </div>
+                                        </th>
+                                        <th class="td_right"> Current Avg/Day(1)
+                                            <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('CurrentAvg/Day(1)')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['CurrentAvg/Day(1)']}">
+                                                  <div class="filter-option" (click)="applyFilter('CurrentAvg/Day(1)', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['CurrentAvg/Day(1)']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('CurrentAvg/Day(1)')">
+                                                  </div>
+                                              </div>
+                                           </div>  
+                                        </th>
+                                        <th class="td_right"> Required Avg/Day(26)
+                                            <div class="filter-container">
+                                                <div class="filter-toggle" (click)="toggleFilter('RequiredAvg/Day(26)')">
+                                                  <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                                                </div>
+                                                <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['RequiredAvg/Day(26)']}">
+                                                  <div class="filter-option" (click)="applyFilter('RequiredAvg/Day(26)', 'Option 1')">Filter</div>
+                                                  <div class="input-box" [class.show-input]="isFilterInputOpen['RequiredAvg/Day(26)']">
+                                                    <input type="text" placeholder=" " (blur)="toggleFilterInput('RequiredAvg/Day(26)')">
+                                                  </div>
+                                              </div>
+                                           </div> 
+                                         </th>
+                                     </thead>
                                 <tbody *ngIf="Tabledata1.length !=0">
                                     <tr *ngFor="let data of Tabledata1 ; let indexOfelement = index">
                                         <td class="td_left">{{data.CUST_NAME}}</td>
