--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -21,7 +21,7 @@
                         <span class="border-lable-flt">
                             <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
                                 [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
-                                [selectOnTab]='true' [required]="BRANCH" >
+                                [selectOnTab]='true' [required]="BRANCH">
                                 <ng-option *ngFor="let values of branch" [value]="values">
                                     {{values.NAME}}</ng-option>
                             </ng-select>
@@ -37,9 +37,9 @@
                 <div class="col-sm-2">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
-                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME autofocus
-                                [(ngModel)]="selectedYear" formControlName="YEAR_NAME" (focus)="onFocus(YEAR_NAME)"
-                                [selectOnTab]='true'>
+                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
+                                autofocus [(ngModel)]="selectedYear" formControlName="YEAR_NAME"
+                                (focus)="onFocus(YEAR_NAME)" [selectOnTab]='true'>
                                 <ng-option *ngFor="let values of finyear" [value]="values">
                                     {{values.DATEDESC}}</ng-option>
                             </ng-select>
@@ -73,47 +73,57 @@
 
                     <div class="card-block">
 
-                        <table class="table table-striped table-bordered table-hover compact margintable" style="margin-top:25px;">
+                        <table class="table table-striped table-bordered table-hover compact margintable"
+                            style="margin-top:25px;">
 
                             <thead style="position: sticky; top: 0; text-align: center;">
-                                <tr >                               
-                                </tr>                              
-                                <th colspan="6" >
+                                <tr>
+                                </tr>
+                                <th colspan="6">
                                     <div class="search-container">
-                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search..." style="float: left;">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()"
+                                            placeholder="Search..." style="float: left;">
                                     </div>
                                 </th>
                                 <tr *ngIf="Headers.length !=0">
                                     <th class="td_left" style="text-align:r;">Month
                                         <div class="filter-container">
-                                          <div class="filter-toggle" (click)="toggleFilter(column)">
-                                            <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                                          </div>
-                                          <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
-                                            <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
-                                            <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
-                                              <input type="text" placeholder=" " (blur)="toggleFilterInput(column)">
+                                            <div class="filter-toggle" (click)="toggleFilter(column)">
+                                                <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
                                             </div>
-                                          </div>
-                                        </div>
-                                      </th> 
-                                      <th scope="col"style="width: max-content;" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
-                                        <div class="filter-container">
-                                          <div class="filter-toggle" (click)="toggleFilter(data.VALUE)">
-                                            <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
-                                          </div>
-                                          <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[data.VALUE]}">
-                                            <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
-                                            <div class="input-box" [class.show-input]="isFilterInputOpen[data.VALUE]">
-                                              <input type="text" placeholder=" " (blur)="toggleFilterInput(data.VALUE)">
+                                            <div class="filter-options"
+                                                [ngClass]="{'show-filter-options': isFilterOpen[column]}">
+                                                <div class="filter-option" (click)="applyFilter(column, 'Option 1')">
+                                                    Filter</div>
+                                                <div class="input-box" [class.show-input]="isFilterInputOpen[column]">
+                                                    <input type="text" placeholder=" "
+                                                        (blur)="toggleFilterInput(column)">
+                                                </div>
                                             </div>
-                                          </div>
                                         </div>
-                                      </th>
+                                    </th>
 
-                      
+
+                                    <th *ngFor="let data of Headers " style="text-align: left;">
+                                        {{data.MAT_NAME}}
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter(data.MAT_NAME)">
+                                                <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options"
+                                                [ngClass]="{'show-filter-options': isFilterOpen[data.MAT_NAME]}">
+                                                <div class="filter-option" (click)="applyFilter(column, 'Option 1')">
+                                                    Filter</div>
+                                                <div class="input-box"
+                                                    [class.show-input]="isFilterInputOpen[data.MAT_NAME]">
+                                                    <input type="text" placeholder=" "
+                                                        (blur)="toggleFilterInput(data.MAT_NAME)">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </th>
                                 </tr>
-                                
+
                             </thead>
                             <tbody *ngIf="Tabledata.length !=0">
                                 <tr *ngFor="let data of Tabledata;">
@@ -130,4 +140,3 @@
         </div>
     </div>
 </div>
-
