--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,18 +217,18 @@ td {
   //position: fixed !important;
 }
 
-// html {
-//   margin-left: 3px;
-//   margin-right: 3px;
-//   overflow: auto;
-//   overflow-x: hidden;
-//   background: url(./assets/images/bg.jpg) repeat-x scroll left bottom transparent;
-//   border-style: solid none solid;
-//   border-color: #93B5D2;
-//   border-width: 1px medium 1px;
-//   // position: relative !important;
-//   //   z-index: 0 !important;
-// }
+html {
+  margin-left: 3px;
+  margin-right: 3px;
+  overflow: auto;
+  overflow-x: hidden;
+  background: url(./assets/images/bg.jpg) repeat-x scroll left bottom transparent;
+  border-style: solid none solid;
+  border-color: #93B5D2;
+  border-width: 1px medium 1px;
+  // position: relative !important;
+  //   z-index: 0 !important;
+}
 
 .ng-select .ng-clear-wrapper {
   display: none !important;
