--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -30,7 +30,7 @@
       <!-- App Search-->
       <form class="app-search d-none d-xl-block">
         <div class="position-relative">
-          <h5><a>{{companyname}}</a></h5>
+          <h5><a style="font-size: 18px;">{{companyname}}</a></h5>
           <!-- <span class="bx bx-search-alt"></span> -->
         </div>
       </form>
