--- a/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
+++ b/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
@@ -69,7 +69,7 @@
                   </div>
                 </th>
                 <tr>
-                  <th style="width: 20%;">Supplier Name
+                  <th class="td_left" style="width: 20%;">Supplier Name
                     <div class="filter-container">
                       <div class="filter-toggle" (click)="toggleFilter('SupplierName')">
                         <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
@@ -1644,6 +1644,8 @@
     </div>
   </div>
 </div>
+
+
 
 <div class="form-group row justify-content-md-center">
   <div class="col-sm text-center">
