--- a/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.html
+++ b/src/app/pages/quality-control/customer-wise-complaints-received/customer-wise-complaints-received.component.html
@@ -16,7 +16,7 @@
                 <div class="col-sm-2" *ngIf="showBranch">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
-                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME"  required #BRANCH_NAME
+                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
                                 [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
                                 [selectOnTab]='true' [required]="BRANCH">
                                 <ng-option *ngFor="let values of branch" [value]="values">
@@ -33,9 +33,9 @@
                 <div class="col-sm-2">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
-                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME autofocus
-                                [(ngModel)]="selectedYear" formControlName="YEAR_NAME" (focus)="onFocus(YEAR_NAME)"
-                                [selectOnTab]='true'>
+                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
+                                autofocus [(ngModel)]="selectedYear" formControlName="YEAR_NAME"
+                                (focus)="onFocus(YEAR_NAME)" [selectOnTab]='true'>
                                 <ng-option *ngFor="let values of finyear" [value]="values">
                                     {{values.DATEDESC}}</ng-option>
                             </ng-select>
@@ -80,11 +80,12 @@
                         <table class="table table-striped table-bordered table-hover compact" style="margin-top:25px;">
                             <thead style="position: sticky; top: 0; text-align: center;">
 
-                                <tr>                               
-                                </tr>                              
+                                <tr>
+                                </tr>
                                 <th colspan="6">
                                     <div class="search-container">
-                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()"
+                                            placeholder="Search...">
                                     </div>
                                 </th>
                                 <tr>
@@ -131,6 +132,20 @@
                         </table>
                         <!-- </smart-table> -->
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row" style="margin-top: 1px;" *ngIf="showtable">
+    <div class="col-lg">
+        <div class="card">
+            <div class="card-body">
+                <div class="chartjs-chart">
+                    <!-- Bar Chart -->
+                    <canvas baseChart [datasets]="datasets" chartType="bar" [options]="options" height="300" [labels]="labels">
+                    </canvas>
                 </div>
             </div>
         </div>
