--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -105,7 +105,7 @@
                                     </th>
 
 
-                                    <th *ngFor="let data of Headers " style="text-align: left;">
+                                    <th *ngFor="let data of Headers " style="text-align: right;">
                                         {{data.MAT_NAME}}
                                         <div class="filter-container">
                                             <div class="filter-toggle" (click)="toggleFilter(data.MAT_NAME)">
