at one time one coloumn search box is open and privious is close

--- a/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
+++ b/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
@@ -83,7 +83,7 @@
                                 </tr>                              
                                 <th colspan="6">
                                     <div class="search-container">
-                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search..." style="float: left;">
+                                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
                                     </div>
                                 </th>
                                 <tr>
