--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -311,16 +311,16 @@
                 <tr *ngFor="let data of FooterData;let indexOfelement = index">
                   <td class="td_right"> </td>
                   <td class="td_left" style="font-weight: bold;">{{data.SUBGL_LONGNAME}} </td>
-                  <td class="td_right"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : ''}}</td>
-                  <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : ''}}</td>
-                  <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT : ''}} </td>
-                  <td class="td_right">{{data.CREDIT_DAYS != 0 ? data.CREDIT_DAYS : ''}}</td>
-                  <td class="td_right">{{data.CR_DAYS != 0 ? data.CR_DAYS : ''}}</td>
-                  <td class="td_right">{{data.CR_DAYS1 != 0 ? data.CR_DAYS1 : ''}}</td>
-                  <td class="td_right">{{data.CR_DAYS2 != 0 ? data.CR_DAYS2 : ''}}</td>
-                  <td class="td_right">{{data.CR_DAYS3 != 0 ? data.CR_DAYS3 : ''}}</td>
-                  <td class="td_right">{{data.CR_DAYS4 != 0 ? data.CR_DAYS4 : ''}}</td>
-                  <td class="td_right">{{data.CR_DAYS5 != 0 ? data.CR_DAYS5 : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.RECV_PERCENT != null ? data.RECV_PERCENT : ''}} </td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CREDIT_DAYS != 0 ? data.CREDIT_DAYS : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CR_DAYS != 0 ? data.CR_DAYS : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CR_DAYS1 != 0 ? data.CR_DAYS1 : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CR_DAYS2 != 0 ? data.CR_DAYS2 : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CR_DAYS3 != 0 ? data.CR_DAYS3 : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CR_DAYS4 != 0 ? data.CR_DAYS4 : ''}}</td>
+                  <td class="td_right" style="font-weight: bold;">{{data.CR_DAYS5 != 0 ? data.CR_DAYS5 : ''}}</td>
                 </tr>
               </tfoot>
             </table>
