--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -54,23 +54,36 @@
       <div class="table-fixed">
         <div class="card">
           <div class="card-block">
-            <table class="table table-striped table-bordered table-hover compact marginTable " >
+            <table class="table table-striped table-bordered table-hover compact marginTable ">
               <thead style="position: sticky; top: 0; text-align: center;">
 
-                <tr>                               
-                </tr>                              
-                <th colspan="17">
-                    <div class="search-container">
-                        <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
-                    </div>
+                <tr>
+                </tr>
+                <th colspan="18">
+                  <div class="search-container">
+                    <input type="text" [(ngModel)]="searchQuery" (input)="filterData()" placeholder="Search...">
+                  </div>
                 </th>
 
 
                 <tr *ngIf="Headers.length !=0">
+                  <th class="td_right">Sr. No.
+                    <div class="filter-container">
+                      <div class="filter-toggle" (click)="toggleFilter('srno')">
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                      </div>
+                      <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen['srno']}">
+                        <div class="filter-option" (click)="applyFilter('srno', 'Option 1')">Filter</div>
+                        <div class="input-box" [class.show-input]="isFilterInputOpen['srno']">
+                          <input type="text" placeholder=" " (blur)="toggleFilterInput('srno')">
+                        </div>
+                      </div>
+                    </div>
+                  </th>
                   <th class="td_left">Month
                     <div class="filter-container">
                       <div class="filter-toggle" (click)="toggleFilter(column)">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
                       </div>
                       <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[column]}">
                         <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
@@ -84,7 +97,7 @@
                   <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
                     <div class="filter-container">
                       <div class="filter-toggle" (click)="toggleFilter(data.VALUE)">
-                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span> 
+                        <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
                       </div>
                       <div class="filter-options" [ngClass]="{'show-filter-options': isFilterOpen[data.VALUE]}">
                         <div class="filter-option" (click)="applyFilter(column, 'Option 1')">Filter</div>
@@ -98,13 +111,29 @@
               </thead>
               <tbody *ngIf="Tabledata.length !=0">
                 <tr *ngFor="let data of Tabledata;">
-                  <td class="td_left">{{data[0]}}</td>
+                  <td class="td_right">{{data[0]}}</td>
+                  <td class="td_left">{{data[1]}}</td>
 
-                  <td *ngFor="let datarec of data.slice(1)" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
+                  <td *ngFor="let datarec of data.slice(2)" style="text-align: right;">{{datarec != null ? datarec : 0}}
+                  </td>
                 </tr>
               </tbody>
             </table>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row" *ngIf="showtable" style="margin: 3%;">
+  <div class="col-lg">
+    <div class="card">
+      <div class="card-body">
+        <div class="chartjs-chart">
+          <!-- Line Chart -->
+          <canvas baseChart height="300" [datasets]="datasets" [labels]="labels" [options]="options" chartType="line">
+          </canvas>
         </div>
       </div>
     </div>
