--- a/src/app/pages/sales/turn-over/turn-over.component.html
+++ b/src/app/pages/sales/turn-over/turn-over.component.html
@@ -1,18 +1,159 @@
+<div class="text-center">
+    <i class="fa " [ngClass]="{'d-flex justify-content-center': isLoading1}" style="font-size:46px;"></i>
+    <i class="fa loader" [ngClass]="{'fa-spin fa-spinner': isLoading1}" style="font-size:46px;"></i>
+</div>
+<div class="card" *ngIf="!isLoading1">
+    <div class="card-header">
+        <h5>Payment Collection Plan</h5>
+    </div>
+    <form [formGroup]="angForm">
+        <div class="card-block">
+            <div class="row" style="margin: 1%;">
+                <!--  *ngIf="showBranch" -->
+                <div class="col-sm-2" *ngIf="showBranch">
+                    <label>Select Branch <sub class="required">* </sub></label>
+                </div>
+                <div class="col-sm-2" *ngIf="showBranch">
+                    <div class="form-group form-primary form-static-label">
+                        <span class="border-lable-flt">
+                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
+                                [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
+                                [selectOnTab]='true' [required]="BRANCH">
+                                <ng-option *ngFor="let values of branch" [value]="values">
+                                    {{values.NAME}}</ng-option>
+                            </ng-select>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <label>Select From Finacial Year <sub class="required">* </sub></label>
+                </div>
+                <div class="col-sm-2">
+                    <div class="form-group form-primary form-static-label">
+                        <span class="border-lable-flt">
+                            <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
+                                autofocus [(ngModel)]="selectedYear" formControlName="YEAR_NAME"
+                                (focus)="onFocus(YEAR_NAME)" [selectOnTab]='true'>
+                                <ng-option *ngFor="let values of finyear" [value]="values">
+                                    {{values.DATEDESC}}</ng-option>
+                            </ng-select>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <label>Select To Finacial Year <sub class="required">* </sub></label>
+                </div>
+                <div class="col-sm-2">
+                    <div class="form-group form-primary form-static-label">
+                        <span class="border-lable-flt">
+                            <ng-select id="TYEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #TYEAR_NAME
+                                [(ngModel)]="selectedTYear" formControlName="TYEAR_NAME" (focus)="onFocus(TYEAR_NAME)"
+                                [selectOnTab]='true'>
+                                <ng-option *ngFor="let values of finyear" [value]="values">
+                                    {{values.DATEDESC}}</ng-option>
+                            </ng-select>
+                        </span>
+                    </div>
+                </div>
 
+            </div>
+            <div class="row" style="margin: 1%;">
 
-<select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float: right;" (change)="handleClick($event, 'csv')">
-    <option selected>Export Type </option>
-    <option>CSV</option>
-    <option>PDF</option>
-</select>
+                <div class="col-sm text-center">
+                    <button class="btn btn-primary sm" [disabled]="isLoading" (click)="loadData()">Go <i class="fa"
+                            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+    <div class="col-12">
+        <div class="table-responsive">
+            <div class="table-fixed">
+                <div class="card">
+                    <div class="card-block">
+                        <table class="table table-striped table-bordered table-hover compact" style="margin-top: 25px;">
+                            <thead style="position: sticky; top: 0; text-align: center;">
+                                <tr>
+                                </tr>
+                                <tr>
+                                    <th colspan="12">
+                                        <div class="search-container">
+                                            <input type="text" [(ngModel)]="searchQuery" (input)="filterData()"
+                                                placeholder="Search...">
+                                        </div>
+                                    </th>
+                                </tr>
+                                <tr class="sticky-header">
+                                    <th class="td_left table-header">Financial Year
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('FinancialYear')">
+                                                <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options"
+                                                [ngClass]="{'show-filter-options': isFilterOpen['FinancialYear']}">
+                                                <div class="filter-option"
+                                                    (click)="applyFilter('FinancialYear', 'Option 1')">
+                                                    Filter</div>
+                                                <div class="input-box"
+                                                    [class.show-input]="isFilterInputOpen['FinancialYear']">
+                                                    <input type="text" placeholder=" "
+                                                        (blur)="toggleFilterInput('FinancialYear')">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </th>
+                                    <th class="td_right table-header">Total Sale In Lacs
+                                        <div class="filter-container">
+                                            <div class="filter-toggle" (click)="toggleFilter('TotalSaleInLacs')">
+                                                <span class="tnb-icon fa fa-caret-down" aria-hidden="true"></span>
+                                            </div>
+                                            <div class="filter-options"
+                                                [ngClass]="{'show-filter-options': isFilterOpen['TotalSaleInLacs']}">
+                                                <div class="filter-option"
+                                                    (click)="applyFilter('TotalSaleInLacs', 'Option 1')">
+                                                    Filter</div>
+                                                <div class="input-box"
+                                                    [class.show-input]="isFilterInputOpen['TotalSaleInLacs']">
+                                                    <input type="text" placeholder=" "
+                                                        (blur)="toggleFilterInput('TotalSaleInLacs')">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody *ngIf="Tabledata.length !=0">
+                                <tr *ngFor="let data of Tabledata;let indexOfelement = index">
+                                    <td class="td_left"> {{data.FIN_YEAR_TEXT }}</td>
+                                    <td class="td_right"> {{data.SALE_AMT }}</td>
+                                </tr>
+                            </tbody>
+                            <tbody *ngIf="Tabledata.length ==0">
+                                <tr>
+                                    <td>No Data</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
-
-</smart-table> -->
-
-<smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
-    [columns]="columns"></smart-table>
+<div class="row" style="margin-top: 1px;" *ngIf="showtable">
+    <div class="col-lg">
+        <div class="card">
+            <div class="card-body">
+                <div class="chartjs-chart">
+                    <!-- Bar Chart -->
+                    <canvas baseChart [datasets]="datasets" chartType="bar" [options]="options" height="300"
+                        [labels]="labels">
+                    </canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
